{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 49,
  "lineage": "3cef8fa2-af0e-a758-8e0a-89ddb8a8ced7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a23e9f3f174ed68",
            "arn": "arn:aws:ec2:us-east-1:211125514051:elastic-ip/eipalloc-03a23e9f3f174ed68",
            "association_id": "eipassoc-014e108433b9ce3e3",
            "domain": "vpc",
            "id": "eipalloc-03a23e9f3f174ed68",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09a8f4276413b0f87",
            "private_dns": "ip-10-10-1-228.ec2.internal",
            "private_ip": "10.10.1.228",
            "public_dns": "ec2-34-202-45-38.compute-1.amazonaws.com",
            "public_ip": "34.202.45.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EmailInfraProd-NatEIP",
              "Project": "EmailInfraProd"
            },
            "tags_all": {
              "Name": "EmailInfraProd-NatEIP",
              "Project": "EmailInfraProd"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nagios_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:211125514051:instance/i-0903a8ad82e865806",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EmailInfraProd-Nagios-Profile",
            "id": "i-0903a8ad82e865806",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nguyenp-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b07a4e74354e3e4e",
            "private_dns": "ip-10-10-1-236.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.236",
            "public_dns": "ec2-18-212-40-116.compute-1.amazonaws.com",
            "public_ip": "18.212.40.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03d2f01a674380ffa",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0606eeccb7dbc5b94",
            "tags": {
              "Name": "EmailInfraProd-NagiosServer",
              "Project": "EmailInfraProd",
              "Role": "Nagios"
            },
            "tags_all": {
              "Name": "EmailInfraProd-NagiosServer",
              "Project": "EmailInfraProd",
              "Role": "Nagios"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08776045253db50da"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.nagios_profile",
            "aws_iam_role.nagios_server_role",
            "aws_security_group.nagios_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nfs_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:211125514051:instance/i-0df830b1f7cfacc64",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "EmailInfraProd-NFS-DataVolume",
                  "Project": "EmailInfraProd"
                },
                "tags_all": {
                  "Name": "EmailInfraProd-NFS-DataVolume",
                  "Project": "EmailInfraProd"
                },
                "throughput": 125,
                "volume_id": "vol-042ca315dd7b0578e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EmailInfraProd-NFS-Profile",
            "id": "i-0df830b1f7cfacc64",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nguyenp-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fbd19f2ae7fc5309",
            "private_dns": "ip-10-10-101-68.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.101.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e989e0e5369521c2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e68c506810ee0ccc",
            "tags": {
              "Name": "EmailInfraProd-NFSServer",
              "Project": "EmailInfraProd",
              "Role": "NFS"
            },
            "tags_all": {
              "Name": "EmailInfraProd-NFSServer",
              "Project": "EmailInfraProd",
              "Role": "NFS"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fc3a143a87f6ee1d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.nfs_profile",
            "aws_iam_role.nfs_server_role",
            "aws_security_group.nfs_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:internet-gateway/igw-08a21e6e3803449f8",
            "id": "igw-08a21e6e3803449f8",
            "owner_id": "211125514051",
            "tags": {
              "Name": "EmailInfraProd-IGW",
              "Project": "EmailInfraProd"
            },
            "tags_all": {
              "Name": "EmailInfraProd-IGW",
              "Project": "EmailInfraProd"
            },
            "vpc_id": "vpc-05289181f27f39c5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a23e9f3f174ed68",
            "association_id": "eipassoc-014e108433b9ce3e3",
            "connectivity_type": "public",
            "id": "nat-0c7ee3324b7a263bc",
            "network_interface_id": "eni-09a8f4276413b0f87",
            "private_ip": "10.10.1.228",
            "public_ip": "34.202.45.38",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0606eeccb7dbc5b94",
            "tags": {
              "Name": "EmailInfraProd-NATGateway",
              "Project": "EmailInfraProd"
            },
            "tags_all": {
              "Name": "EmailInfraProd-NATGateway",
              "Project": "EmailInfraProd"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:route-table/rtb-032cc790c40a0bcbc",
            "id": "rtb-032cc790c40a0bcbc",
            "owner_id": "211125514051",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c7ee3324b7a263bc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EmailInfraProd-PrivateRouteTable",
              "Project": "EmailInfraProd"
            },
            "tags_all": {
              "Name": "EmailInfraProd-PrivateRouteTable",
              "Project": "EmailInfraProd"
            },
            "timeouts": null,
            "vpc_id": "vpc-05289181f27f39c5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:route-table/rtb-0f110fcdd94557078",
            "id": "rtb-0f110fcdd94557078",
            "owner_id": "211125514051",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a21e6e3803449f8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EmailInfraProd-PublicRouteTable",
              "Project": "EmailInfraProd"
            },
            "tags_all": {
              "Name": "EmailInfraProd-PublicRouteTable",
              "Project": "EmailInfraProd"
            },
            "timeouts": null,
            "vpc_id": "vpc-05289181f27f39c5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0114f7b8a777ff543",
            "route_table_id": "rtb-032cc790c40a0bcbc",
            "subnet_id": "subnet-0e68c506810ee0ccc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a54be33e1a214950",
            "route_table_id": "rtb-032cc790c40a0bcbc",
            "subnet_id": "subnet-034af2f5c0936fb9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d676fb6aaad8f040",
            "route_table_id": "rtb-0f110fcdd94557078",
            "subnet_id": "subnet-0606eeccb7dbc5b94"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02632d71f8bf70bbb",
            "route_table_id": "rtb-0f110fcdd94557078",
            "subnet_id": "subnet-0da38e436abda71e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nagios_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:security-group/sg-08776045253db50da",
            "description": "SG for Nagios Server (ASCII only description)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08776045253db50da",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.0/24",
                  "10.10.2.0/24",
                  "10.10.101.0/24",
                  "10.10.102.0/24"
                ],
                "description": "NRPE from Customer VMs",
                "from_port": 5666,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5666
              },
              {
                "cidr_blocks": [
                  "171.235.185.235/32"
                ],
                "description": "Nagios UI (port 8081)",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "171.235.185.235/32"
                ],
                "description": "SSH from your IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "EmailInfraProd-Nagios-SG",
            "name_prefix": "",
            "owner_id": "211125514051",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EmailInfraProd-Nagios-SG"
            },
            "tags_all": {
              "Name": "EmailInfraProd-Nagios-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05289181f27f39c5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nfs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:security-group/sg-0fc3a143a87f6ee1d",
            "description": "SG for NFS Server (ASCII only description)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc3a143a87f6ee1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "NFS (UDP) from within VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "NFS from within VPC (TCP)",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "RPCbind/Portmapper (TCP) from within VPC",
                "from_port": 111,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 111
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "RPCbind/Portmapper (UDP) from within VPC",
                "from_port": 111,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 111
              },
              {
                "cidr_blocks": [
                  "171.235.185.235/32"
                ],
                "description": "SSH from your IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "EmailInfraProd-NFS-SG",
            "name_prefix": "",
            "owner_id": "211125514051",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EmailInfraProd-NFS-SG"
            },
            "tags_all": {
              "Name": "EmailInfraProd-NFS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05289181f27f39c5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:subnet/subnet-0e68c506810ee0ccc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e68c506810ee0ccc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125514051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EmailInfraProd-PrivateSubnet-1",
              "Project": "EmailInfraProd",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "EmailInfraProd-PrivateSubnet-1",
              "Project": "EmailInfraProd",
              "Tier": "Private"
            },
            "vpc_id": "vpc-05289181f27f39c5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:subnet/subnet-034af2f5c0936fb9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034af2f5c0936fb9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125514051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EmailInfraProd-PrivateSubnet-2",
              "Project": "EmailInfraProd",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "EmailInfraProd-PrivateSubnet-2",
              "Project": "EmailInfraProd",
              "Tier": "Private"
            },
            "vpc_id": "vpc-05289181f27f39c5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:subnet/subnet-0606eeccb7dbc5b94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0606eeccb7dbc5b94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125514051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EmailInfraProd-PublicSubnet-1",
              "Project": "EmailInfraProd",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "EmailInfraProd-PublicSubnet-1",
              "Project": "EmailInfraProd",
              "Tier": "Public"
            },
            "vpc_id": "vpc-05289181f27f39c5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:subnet/subnet-0da38e436abda71e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da38e436abda71e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125514051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EmailInfraProd-PublicSubnet-2",
              "Project": "EmailInfraProd",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "EmailInfraProd-PublicSubnet-2",
              "Project": "EmailInfraProd",
              "Tier": "Public"
            },
            "vpc_id": "vpc-05289181f27f39c5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:vpc/vpc-05289181f27f39c5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0db6204e1cd6fd695",
            "default_route_table_id": "rtb-0bc03da690c2d427d",
            "default_security_group_id": "sg-05f942f1315fbb1a1",
            "dhcp_options_id": "dopt-0026675c83313a1b9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05289181f27f39c5c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bc03da690c2d427d",
            "owner_id": "211125514051",
            "tags": {
              "Name": "EmailInfraProd-VPC",
              "Project": "EmailInfraProd"
            },
            "tags_all": {
              "Name": "EmailInfraProd-VPC",
              "Project": "EmailInfraProd"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}